@@ -2,12 +2,13 @@ import numpy as np
 import pandas as pd
 from pandas_datareader import data as web
 
+
 # implement by chapter 4 in pyalgoquant
 
 # we will get data from 2002 to test
 
 #data = new_hist.export() # retrieve historical data
-lookback = [1,5,10,25,60,120]
+lookback = [1,2,5,10]
 holddays = [1,5,10,25,60,120]
 tcost = [0, 0.001, 0.002, 0.003, 0.004, 0.005] # transaction cost
 
@@ -75,12 +76,11 @@ class MomVectBacktest(object):
 		self.results[['creturns','cstrategy']].plot(title=title,figsize=(10,6))
 
 if __name__ == '__main__':
-	mombt = MomVectBacktest('AAPL','2010-1-1','2016-10-31',10000, tcost[0])
-	print(mombt.run_strategy())
-	print(mombt.run_strategy(momentum=2))
-	for i in range(1,len(tcost)):
-		mombt = MomVectBacktest('AAPL','2010-1-1','2016-10-31',10000, tcost[i])
-		print(mombt.run_strategy(momentum=2))
+	for t in range(len(lookback)):
+		print('lookback period %d' %lookback[t])
+		for i in range(len(tcost)):
+			mombt = MomVectBacktest('AAPL','2010-1-1','2016-10-31',10000, tcost[i])
+			print(mombt.run_strategy(momentum=2))
 
 
 '''
