@@ -29,72 +29,51 @@ ctx = v20.Context(
 response = ctx.account.instruments(config['oanda_v20']['account_id'])
 r = response.get('instruments')
 
-#dateTime formatting
-suffix = '.000000000Z'
-time1 = dt.datetime(2016,8,1,0,0,0)
-d1 = time1.isoformat('T') + suffix
-time2 = dt.datetime(2016,8,2,0,0,0)
-d2 = time2.isoformat('T') + suffix
-time_unit = dt.timedelta(1)
-limit = dt.datetime(2016,8,15,0,0,0)
-limit = limit.isoformat('T') + suffix
+def export():
+	#dateTime formatting
+	suffix = '.000000000Z'
+	time1 = dt.datetime(2016,8,1,0,0,0)
+	d1 = time1.isoformat('T') + suffix
+	time2 = dt.datetime(2016,8,2,0,0,0)
+	d2 = time2.isoformat('T') + suffix
+	time_unit = dt.timedelta(1)
+	limit = dt.datetime(2016,8,15,0,0,0)
+	limit = limit.isoformat('T') + suffix
 
-#data chunking
-prices = pd.DataFrame()
-dates = pd.date_range(start = d1, end = limit, freq = 'D')
-for i in range(len(dates)-1):
-	d1 = str(dates[i]).replace(' ', 'T')
-	d2 = str(dates[i+1]).replace(' ', 'T')
-	candle = ctx.instrument.candles(
-		instrument = 'EUR_USD',
-		fromTime = d1,
-		toTime = d2,
-		granularity = 'M1',
-        price = 'A'
-	)
-	data = candle.get('candles')
-	data = [cs.dict() for cs in data] #turn data into dict, pretty important
-	for cs in data:
-		cs.update(cs['ask'])
-		del cs['ask']
-	Kappa = pd.DataFrame(data)
-	prices = prices.append(Kappa)
+	#data chunking
+	prices = pd.DataFrame()
+	dates = pd.date_range(start = d1, end = limit, freq = 'D')
+	for i in range(len(dates)-1):
+		d1 = str(dates[i]).replace(' ', 'T')
+		d2 = str(dates[i+1]).replace(' ', 'T')
+		candle = ctx.instrument.candles(
+			instrument = 'EUR_USD',
+			fromTime = d1,
+			toTime = d2,
+			granularity = 'M1',
+	        price = 'A'
+		)
+		data = candle.get('candles')
+		data = [cs.dict() for cs in data] #turn data into dict, pretty important
+		for cs in data:
+			cs.update(cs['ask'])
+			del cs['ask']
+		Kappa = pd.DataFrame(data)
+		prices = prices.append(Kappa)
+	return prices
 
 #translate the data into dictionary and pandas DataFrame
 
 #create dataframe
 #prices = pd.DataFrame(data)
-print(prices)
-prices["time"] = pd.to_datetime(prices["time"])
-prices = prices.set_index("time")
-prices.index = pd.DatetimeIndex(prices.index)
-prices.to_hdf("data.h5", "data", format="table")
 
-#Testing dataviz configuration
-def visualization_facet(df):
-	# Initialize a grid of plots with an Axes for each walk
-	grid = sns.FacetGrid(df, col="walk", hue="walk", col_wrap=5, size=1.5)
-
-	# Draw a horizontal line to show the starting point
-	grid.map(plt.axhline, y=0, ls=":", c=".5")
-
-	# Draw a line plot to show the trajectory of each random walk
-	grid.map(plt.plot, "step", "position", marker="o", ms=4)
-
-	# Adjust the tick positions and labels
-	grid.set(xticks=np.arange(5), yticks=[-3, 3],
-	         xlim=(-.5, 4.5), ylim=(-3.5, 3.5))
-
-	# Adjust the arrangement of the plots
-	grid.fig.tight_layout(w_pad=1)
-
-
-def visualization_COLH(df):
-	# We will visualize historical data using COLH format
-	pass
-
-def meanrevertstrat():
-	pass
+def showdata():
+	price = export()
+	print(price)
+	price["time"] = pd.to_datetime(price["time"])
+	price = price.set_index("time")
+	price.index = pd.DatetimeIndex(price.index)
+	price.to_hdf("data.h5", "data", format="table")
 
 #vectorized backtest momentum strategy
 """
