@@ -158,4 +158,6 @@ Problem:
 *VectMomentum.py
 - Not finished, needs parameterizing and change yahoo data with Oanda data
 - Needs to find a way to export to files or plots
-- The code is extremely slow, it takes 11 seconds for 5 tcost data points
+- The code is extremely slow, it takes 11 seconds for 5 tcost data points, 38 seconds for 24 data points
+To do:
+- Plot the results
